--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,19 +6,23 @@ authors = ["Jan <j2000.vdm@gmail.com>", "Shayan Ramezani <s.ramezani@student.tud
 license = "MIT"
 readme = "README.md"
 packages = [
-    { include = "lib_ml", from = "src" }
+    { include = "lib_ml_remla", from = "src" }
 ]
 
 [tool.poetry.dependencies]
-python = "^3.11"
-keras = "3.3.3"
+python = "~3.9"
+keras = "^2.10"
 scikit-learn = "1.2.2"
+tensorflow = "~2.10"
+tensorflow-io-gcs-filesystem ="0.31.0"
 
 [tool.poetry.group.dev]
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-bump-my-version = "^0.0.1"
+bump-my-version = "^0.21.0"
+pytest = "^8.0.0"
+numpy = "^1.26"
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
@@ -40,10 +44,10 @@ serialize = [
     "{major}.{minor}.{patch}",
 ]
 current_version = "(0|[1-9]\\d*)\\.(0|[1-9]\\d*)\\.(0|[1-9]\\d*)(-beta\\.(0|[1-9]\\d*))?"
-regex = True
-ignore_missing_version = False
-tag = False
-commit = True
+regex = true
+ignore_missing_version = false
+tag = false
+commit = true
 message = "Bump version: {current_version} → {new_version}"
 
 [[tool.bumpversion.files]]
