fix poetry lock and code

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,8 +1,8 @@
 name: Bump version
-on:
-  pull_request:
-    types:
-      - closed
+on: push
+  # pull_request:
+  #   types:
+  #     - closed
 
 jobs:
   test:
