--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,24 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "~3.9"
-keras = "^2.10"
+keras = [
+    {platform = "darwin", version = "2.15.0"},
+    {platform = "linux", version = ""^2.10""},
+    {platform = "win32", version = ""^2.10""}
+]
 scikit-learn = "1.2.2"
-tensorflow = "~2.10"
-tensorflow-io-gcs-filesystem ="0.27.0"
+tensorflow = [
+    {platform = "darwin", version = "2.16.0"},
+    {platform = "linux", version = ""~2.10""},
+    {platform = "win32", version = ""~2.10""}
+]
+
+tensorflow-io-gcs-filesystem = [
+    {platform = "darwin", version = "0.37.0"},
+    {platform = "linux", version = "0.27.0"},
+    {platform = "win32", version = "0.27.0"}
+]
+
 
 [tool.poetry.group.dev]
 optional = true
