--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,20 +13,20 @@ packages = [
 python = "~3.9"
 keras = [
     {platform = "darwin", version = "2.15.0"},
-    {platform = "linux", version = ""^2.10""},
-    {platform = "win32", version = ""^2.10""}
+    {platform = "linux", version = "^2.10"},
+    {platform = "win32", version = "^2.10"},
 ]
 scikit-learn = "1.2.2"
 tensorflow = [
-    {platform = "darwin", version = "2.16.0"},
-    {platform = "linux", version = ""~2.10""},
-    {platform = "win32", version = ""~2.10""}
+    {platform = "darwin", version = "~2.15"},
+    {platform = "linux", version = "~2.10"},
+    {platform = "win32", version = "~2.10"},
 ]
 
 tensorflow-io-gcs-filesystem = [
-    {platform = "darwin", version = "0.37.0"},
-    {platform = "linux", version = "0.27.0"},
-    {platform = "win32", version = "0.27.0"}
+    {platform = "darwin", version = "~0.36.0"},
+    {platform = "linux", version = "~0.27.0"},
+    {platform = "win32", version = "~0.27.0"},
 ]
 
 
