--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,56 +1,56 @@
 name: Bump version
-on: push
-  # pull_request:
-  #   types:
-  #     - closed
+on:
+  pull_request:
+    types:
+      - closed
 
 jobs:
-  # test:
-  #   # if: github.event.pull_request.merged == true
-  #   name: ${{ matrix.name }}
-  #   runs-on: ${{ matrix.os }}
-  #   timeout-minutes: 10
-  #   strategy:
-  #     matrix:
-  #       include:
-  #         - name: 'check'
-  #           python: '3.9'
-  #           toxpython: 'python3.9'
-  #           os: 'ubuntu-latest'
-  #         - name: 'py39 (ubuntu)'
-  #           python: '3.9'
-  #           toxpython: 'python3.9'
-  #           python_arch: 'x64'
-  #           os: 'ubuntu-latest'
-  #         - name: 'py39 (windows)'
-  #           python: '3.9'
-  #           toxpython: 'python3.9'
-  #           python_arch: 'x64'
-  #           os: 'windows-latest'
-  #         - name: 'py39 (macos)'
-  #           python: '3.9'
-  #           toxpython: 'python3.9'
-  #           python_arch: 'arm64'
-  #           os: 'macos-latest'
-  #   steps:
-  #   - name: Checkout code
-  #     uses: actions/checkout@v4
-  #     with:
-  #       ref: ${{ github.event.pull_request.merge_commit_sha }}
-  #       fetch-depth: '0'
-  #   - name: Set up Python ${{ matrix.python }}
-  #     uses: actions/setup-python@v5
-  #     with:
-  #       python-version: ${{ matrix.python }}
-  #   - name: Install Poetry
-  #     run: pipx install poetry || pip install poetry
-  #   - name: Install dependencies
-  #     run: poetry install --with dev
-  #   - name: Run tests
-  #     run: poetry run pytest
+  test:
+    if: github.event.pull_request.merged == true
+    name: ${{ matrix.name }}
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 10
+    strategy:
+      matrix:
+        include:
+          - name: 'check'
+            python: '3.9'
+            toxpython: 'python3.9'
+            os: 'ubuntu-latest'
+          - name: 'py39 (ubuntu)'
+            python: '3.9'
+            toxpython: 'python3.9'
+            python_arch: 'x64'
+            os: 'ubuntu-latest'
+          - name: 'py39 (windows)'
+            python: '3.9'
+            toxpython: 'python3.9'
+            python_arch: 'x64'
+            os: 'windows-latest'
+          - name: 'py39 (macos)'
+            python: '3.9'
+            toxpython: 'python3.9'
+            python_arch: 'arm64'
+            os: 'macos-latest'
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        ref: ${{ github.event.pull_request.merge_commit_sha }}
+        fetch-depth: '0'
+    - name: Set up Python ${{ matrix.python }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python }}
+    - name: Install Poetry
+      run: pipx install poetry || pip install poetry
+    - name: Install dependencies
+      run: poetry install --with dev
+    - name: Run tests
+      run: poetry run pytest
 
   bump_version_and_publish:
-    # needs: test
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -83,8 +83,7 @@ jobs:
     - name: Build and publish to PyPI
       if: success() # Only continue if version in files was updated
       run: |
-        poetry config repositories.testpypi https://test.pypi.org/legacy/
-        poetry publish --build -r testpypi -u __token__ -p ${{ secrets.PYPI_TEST_ACCOUNT }}
+        poetry publish --build -u __token__ -p ${{ secrets.PYPI_API_KEY }}
         
   
     
