--- a/.github/workflows/test_workflow.yaml
+++ b/.github/workflows/test_workflow.yaml
@@ -10,21 +10,21 @@ jobs:
     strategy:
       matrix:
         include:
-          # - name: 'check'
-          #   python: '3.11'
-          #   os: 'ubuntu-latest'
+          - name: 'check'
+            python: '3.11'
+            os: 'ubuntu-latest'
           - name: 'py311 (ubuntu)'
             python: '3.11'
             python_arch: 'x64'
             os: 'ubuntu-latest'
-          # - name: 'py311 (windows)'
-          #   python: '3.11'
-          #   python_arch: 'x64'
-          #   os: 'windows-latest'
-          # - name: 'py311 (macos)'
-          #   python: '3.11'
-          #   python_arch: 'arm64'
-          #   os: 'macos-latest'
+          - name: 'py311 (windows)'
+            python: '3.11'
+            python_arch: 'x64'
+            os: 'windows-latest'
+          - name: 'py311 (macos)'
+            python: '3.11'
+            python_arch: 'arm64'
+            os: 'macos-latest'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
